adding keycloak properties

--- a/APIServer/src/main/resources/application.properties
+++ b/APIServer/src/main/resources/application.properties
@@ -1,7 +1,15 @@
+custom.property.host=localhost
+
 # MYSQL Config
-spring.datasource.url=jdbc:mysql://localhost:3306/Apiserver
+spring.datasource.url=jdbc:mysql://${custom.property.host}:3306/Apiserver
 spring.datasource.username=root
 spring.datasource.password=my-secret-pw
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=update
+
+#IAM Config
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${custom.property.host}/auth/realms/E-Commerce
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+jwt.auth.converter.resource-id=E-Commerce-Client
+jwt.auth.converter.principle-attribute=preferred_username
