--- a/APIServer/pom.xml
+++ b/APIServer/pom.xml
@@ -61,11 +61,17 @@
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 	      <groupId>org.springframework.boot</groupId>
 	      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 	    </dependency>
+	    
+	    <dependency>
+		    <groupId>com.squareup.okhttp3</groupId>
+		    <artifactId>okhttp</artifactId>
+		    <version>4.9.1</version>
+		</dependency>
+	    
 
 	</dependencies>
 
