--- a/AngularShop/package.json
+++ b/AngularShop/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.10",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
