--- a/AngularShop/package.json
+++ b/AngularShop/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^16.2.10",
     "@angular/platform-browser-dynamic": "^16.2.10",
     "@angular/router": "^16.2.10",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "ngx-pagination": "^6.0.3",
@@ -31,6 +33,7 @@
     "@angular-devkit/build-angular": "^16.2.6",
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.10",
+    "@angular/localize": "^16.2.10",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
