--- a/AngularShop/package.json
+++ b/AngularShop/package.json
@@ -24,6 +24,8 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "keycloak-angular": "^14.1.0",
+    "keycloak-js": "^22.0.5",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
