bugfix, adding nginx and reconfigure urls

--- a/APIServer/src/main/resources/application.properties
+++ b/APIServer/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=update
 
 #IAM Config
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${custom.property.host}:8180/realms/E-Commerce
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${custom.property.host}/auth/realms/E-Commerce
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 jwt.auth.converter.resource-id=E-Commerce-Client
 jwt.auth.converter.principle-attribute=preferred_username
