--- a/APIServer/src/main/resources/application.properties
+++ b/APIServer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-custom.property.host=${HOSTNAME:localhost}
+custom.property.host=${HOSTNAME:192.168.1.129}
 
 # MYSQL Config
 spring.datasource.url=jdbc:mysql://${custom.property.host}:3306/Apiserver
