--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ MySQL/mysql-data/
 IAM/keycloak-22.0.4/backup/
 IAM/keycloak-22.0.4/data/exportedRealm
 ExpressServer/Files/
+AngularShop/src/environments/
