--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ IAM/keycloak-22.0.4/backup/
 IAM/keycloak-22.0.4/data/exportedRealm
 ExpressServer/Files/
 AngularShop/src/environments/
+APIServer/src/main/resources/application.properties
