--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ IAM/keycloak-22.0.4/data/exportedRealm
 ExpressServer/Files/
 AngularShop/src/environments/
 APIServer/src/main/resources/application.properties
-
+AngularShop/src/assets/legal/
