--- a/APIServer/src/main/resources/application.properties
+++ b/APIServer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-custom.property.host=${HOSTNAME:10.2.109.118}
+custom.property.host=${HOSTNAME:localhost}
 
 # MYSQL Config
 spring.datasource.url=jdbc:mysql://${custom.property.host}:3306/Apiserver
@@ -13,3 +13,11 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${custom.property.ho
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 jwt.auth.converter.resource-id=E-Commerce-Client
 jwt.auth.converter.principle-attribute=preferred_username
+
+#E-Mail Config
+spring.mail.host=smtp.yourmailserver.com
+spring.mail.port=587
+spring.mail.username=your-email@example.com
+spring.mail.password=your-email-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
