update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ APIServer/src/main/resources/application.properties
 AngularShop/src/assets/legal/
 AngularShop/src/assets/legal/i18n/
 AngularShop/src/app/model/contact-info.ts
+Emailservice/src/main/resources/application.properties
