--- a/Nginx/nginx-deploy.conf
+++ b/Nginx/nginx-deploy.conf
@@ -6,13 +6,25 @@ http {
     include mime.types;
 
     server {
-        listen 80;
-        server_name $PROXY_PASS_URL;
-        
-		client_max_body_size 5M;
-		proxy_buffer_size 256k;
-		proxy_buffers 8 256k;
-		proxy_busy_buffers_size 512k;
+		listen 80;
+		server_name achau-server.com;
+		return 301 https://$server_name$request_uri;
+	}
+
+	server {
+		listen 443 ssl;
+		server_name achau-server.com;
+		root /usr/share/nginx/html;
+		index index.html;
+		
+		client_max_body_size 20M; 
+        proxy_buffer_size 128k;
+        proxy_buffers   4 256k;
+        proxy_busy_buffers_size 256k;
+	
+		ssl_certificate /etc/nginx/letsencrypt/live/achau-server.com/fullchain.pem;
+		ssl_certificate_key /etc/nginx/letsencrypt/live/achau-server.com/privkey.pem;
+	}
 
         location / {
             proxy_pass http://$PROXY_GUI_URL/;
@@ -28,10 +40,6 @@ http {
 
         location /auth/ {
             proxy_pass http://$PROXY_AUTH_URL/;
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-			proxy_set_header X-Forwarded-Proto $scheme;
         }
         
         # Add logging (Optional and depending on your path)
