--- a/PriceService/pom.xml
+++ b/PriceService/pom.xml
@@ -37,6 +37,17 @@
 	      <groupId>org.springframework.boot</groupId>
 	      <artifactId>spring-boot-starter-data-jpa</artifactId>
 	    </dependency>
+	    
+	  	<dependency>
+		    <groupId>com.graphql-java</groupId>
+		    <artifactId>graphql-java</artifactId>
+	    </dependency>
+	    
+	    <dependency>
+		    <groupId>com.graphql-java-kickstart</groupId>
+		    <artifactId>graphql-spring-boot-starter</artifactId>
+		    <version>15.1.0</version>
+		</dependency>
 		
 	</dependencies>
 
