--- a/Nginx/conf/nginx.conf
+++ b/Nginx/conf/nginx.conf
@@ -3,39 +3,47 @@ events {
 }
 
 http {
-    include mime.types;
+	include mime.types;
 
     server {
-        listen 80;
-        server_name $PROXY_PASS_URL;
+		listen 80;
+		server_name $PROXY_PASS_URL;
         
 		client_max_body_size 5M;
 		proxy_buffer_size 256k;
 		proxy_buffers 8 256k;
 		proxy_busy_buffers_size 512k;
 
-        location / {
-            proxy_pass http://$PROXY_GUI_URL/;
-        }
+		location / {
+			proxy_pass http://$PROXY_GUI_URL/;
+		}
 
-        location /api/ {
-            proxy_pass http://$PROXY_API_URL/;
-        }
+		location /api/ {
+			proxy_pass http://$PROXY_API_URL/;
+		}
 
-        location /files/ {
-            proxy_pass http://$PROXY_FILE_URL/;
-        }
+		location /files/ {
+			proxy_pass http://$PROXY_FILE_URL/;
+		}
 
-        location /auth/ {
-            proxy_pass http://$PROXY_AUTH_URL/;
+		location /auth/ {
+			proxy_pass http://$PROXY_AUTH_URL/;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
-        }
+		}
+
+		location /cms/ {
+			proxy_pass http://$PROXY_WP_URL/;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+		}
         
-        # Add logging (Optional and depending on your path)
-        access_log /var/log/nginx/access.log;
-        error_log /var/log/nginx/error.log;
+		# Add logging (Optional and depending on your path)
+		access_log /var/log/nginx/access.log;
+		error_log /var/log/nginx/error.log;
     }
 }
